# Curso_Django

./: Pipfile  README.md  pyproject.toml  requirements.txt
devpro/: settings.py  urls.py
devpro/base/: apps.py  models.py  pytest.ini  views.py
devpro/base/migrations/: 0001_initial.py
devpro/base/tests/: test_home.py
