[tool.poetry]
name = "curso python com django!!!"
version = "0.1.0"
description = "Uma aplicação web real utilizando o Web Django, o mais famoso framework web de Python.(Poetry)"
authors = ["y"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.5"
django = "^5.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
